# InjectorEngineDeprecated

./: .gitignore  CMakeLists.txt  README.md
include/: injector_engine.h
resources/shaders/: color.vert  color_tex.frag  color_tex.vert  diffuse.frag  diffuse.vert  editor.frag  editor.vert  unlit.frag  unlit.vert
source/: ambient_material.cpp  attribute.cpp  batch.cpp  buffer.cpp  camera.cpp  color_material.cpp  color_tex_material.cpp  demo.cpp  demo_controller.cpp  diffuse_material.cpp  drawer.cpp  editor.cpp  editor_material.cpp  editor_panel.cpp  engine.cpp  entity.cpp  font.cpp  free_look_camera.cpp  image.cpp  material.cpp  mesh.cpp  opengl_window.cpp  orthographic_camera.cpp  persp_camera.cpp  perspective_camera.cpp  primitive.cpp  renderer.cpp  shader.cpp  texture.cpp  texture_2d.cpp  transform.cpp  unlit_material.cpp  vert_mesh.cpp  vertex_array.cpp  vertex_attribute.cpp  window.cpp
src/: engine.cpp  entity.cpp  graphics.cpp
